; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_o.c_asf_read_generic_value.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfdec_o.c_asf_read_generic_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*)* @asf_read_generic_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asf_read_generic_value(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %25 [
    i32 131, label %9
    i32 130, label %13
    i32 129, label %17
    i32 128, label %21
  ]

9:                                                ; preds = %3
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @avio_rl16(i32* %10)
  %12 = load i32*, i32** %7, align 8
  store i32 %11, i32* %12, align 4
  br label %27

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @avio_rl32(i32* %14)
  %16 = load i32*, i32** %7, align 8
  store i32 %15, i32* %16, align 4
  br label %27

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @avio_rl64(i32* %18)
  %20 = load i32*, i32** %7, align 8
  store i32 %19, i32* %20, align 4
  br label %27

21:                                               ; preds = %3
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @avio_rl16(i32* %22)
  %24 = load i32*, i32** %7, align 8
  store i32 %23, i32* %24, align 4
  br label %27

25:                                               ; preds = %3
  %26 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %26, i32* %4, align 4
  br label %28

27:                                               ; preds = %21, %17, %13, %9
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %25
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @avio_rl16(i32*) #1

declare dso_local i32 @avio_rl32(i32*) #1

declare dso_local i32 @avio_rl64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
